more meta updates
more meta updates

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Startup VC Firm with Bad@$$ Tech | vlv me asap</title>
+	<meta name="description" content="Private equity financing, technical, marketing and managerial expertise provided to startups, early-stage, and emerging companies.">
+	<meta name="keywords" content="private equity financing for startups, vc technical expertise, marketing expertise for startups, early-stage vc firm, emerging company vc">
 	<meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Startup VC Firm with Bad@$$ Tech | vlv me asap">
